--- a/infra/vagrant/Vagrantfile
+++ b/infra/vagrant/Vagrantfile
@@ -9,8 +9,12 @@ Vagrant.configure("2") do |config|
     end
 
     # Freigabe des Verzeichnisses mit dem Go-Projekt
-    config.vm.synced_folder "./", "/home/vagrant/project"
+    config.vm.synced_folder "../../", "/home/vagrant/project"
 
     # Port-Weiterleitung für den Go-Anwendungsport
     config.vm.network "forwarded_port", guest: 8080, host: 8080
+
+    config.vm.provision "ansible" do |ansible|
+      ansible.playbook = "../ansible/playbooks/go-run.yaml"
+    end 
   end
