--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,30 +11,4 @@ jobs:
     steps:
       - name: Get service name and version
         id: service
-        run: |
-          echo "service=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -d '-' -f 1-2)" >> $GITHUB_OUTPUT
-          echo "version=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -d '-' -f 3)" >> $GITHUB_OUTPUT
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          build-args: |
-            service=${{ steps.service.outputs.service }}
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ${{ github.actor }}/${{ steps.service.outputs.service }}:latest
-            ${{ github.actor }}/${{ steps.service.outputs.service }}:${{ steps.service.outputs.version }}
+        run: echo Hallo
