--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Notify on New Tag
 on:
   push:
     tags:
-      - v1.**
+      - '[A-Za-z0-9]+-service-[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   notify:
