--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,23 +1,40 @@
-name: Notify on New Tag
+name: Docker Build and Push
 
 on:
   push:
     tags:
-      - '[A-Za-z0-9]+-service-[0-9]+.[0-9]+.[0-9]+'
+      - "[A-Za-z0-9]+-service-[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  notify:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
-      
-      - name: Notify
-        if: startsWith(github.ref, 'refs/tags/v') # Only notify if the tag starts with 'v'
+      - name: Get service name and version
+        id: service
         run: |
-          echo "A new tag has been created: ${{ github.ref }}"
-          echo "Commit message: ${{ github.event.head_commit.message }}"
-          echo "By: ${{ github.actor }}"
-          # Replace the following line with your notification method, e.g., sending an email, Slack message, etc.
-          echo "Send notification to your desired platform"
+          echo "service=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -d '-' -f 1-2)" >> $GITHUB_OUTPUT
+          echo "version=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -d '-' -f 3)" >> $GITHUB_OUTPUT
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          build-args: |
+            Service_Name=${{ steps.service.outputs.service }}
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ${{ github.actor }}/${{ steps.service.outputs.service }}:latest
+            ${{ github.actor }}/${{ steps.service.outputs.service }}:${{ steps.service.outputs.version }}
