--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
           echo "service=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -d '-' -f 1-2)" >> $GITHUB_OUTPUT
           echo "version=$(echo ${{ github.ref }} | cut -d '/' -f 3 | cut -d '-' -f 3)" >> $GITHUB_OUTPUT
 
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
