--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,19 +5,18 @@ name: Go
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.22"
 
-    - name: Test
-      run: go test -v ./...
+      - name: Test
+        run: go test -v ./...
